# DeFi-Security

./: .env.example  .gitignore  .pre-commit-config.yaml  .simbolik.json  AUDITORIA_COMPLETA.md  AUDITORIA_SAUDE_PROJETO.md  CASE_STUDY_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_UPLOAD_PLAN.md  LICENSE  Makefile  README.md  RELATORIO_ARVORE_COMPLETA.md  RELATORIO_DE_TESTES_FUNCIONALIDADES.md  RELATORIO_PROBLEMAS_E_MELHORIAS.md  RELATORIO_PROJETO.md  SECURITY.md  _debug_payload.py  docker-compose.prod.yml  docker-compose.yml  dumb_output.txt  package-lock.json  pytest_output.txt  pytest_res.txt  pytest_res_utf8.txt  render.yaml  requirements.txt  requirements_depin.txt  test_backend_mint.py  test_backend_mint2.py  test_mint_debug.py  test_mint_direct.py  test_mint_out.txt  test_mint_out2.txt  test_mint_out2_utf8.txt  test_mint_out_utf8.txt  test_mint_quick.py  test_sbt_mint.py  toolbox.sh  (+2 more)
audits/CircleArc/src/: .gitmodules  .licenseignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  ACCOUNTS.md  COPYRIGHT  Cargo.toml  Makefile  buf.yaml  docker-bake.hcl  eslint.config.mjs  hardhat.config.ts  package-lock.json  package.json  remappings.txt  rustfmt.toml  tsconfig.json
audits/CircleArc/src/.cargo/: audit.toml  config.toml
audits/CircleArc/src/.config/: nextest.toml
audits/CircleArc/src/.github/actions/cloudsmith-login/: action.yml
audits/CircleArc/src/arcup/: arcup  install
audits/CircleArc/src/assets/apt/: apt-retry.conf  debian.sources
audits/CircleArc/src/assets/devnet/: .gitignore  config.json  genesis.config.ts  genesis.json
audits/CircleArc/src/assets/localdev/: .gitignore
audits/CircleArc/src/assets/testnet/: config.json  genesis.config.ts  genesis.json
audits/CircleArc/src/contracts/: .gitignore
audits/CircleArc/src/contracts/scripts/: DenylistManagement.s.sol  DeployGasGuzzler.s.sol  DeployMemo.s.sol  DeployMulticall3From.s.sol  DeployPermissionedValidatorManager.s.sol  DeployProtocolConfig.s.sol  ProtocolConfigManagement.s.sol  ProxyManagement.s.sol  ValidatorManagement.s.sol
audits/CircleArc/src/contracts/src/: Denylist.sol
audits/CircleArc/src/contracts/src/batch/: IMulticall3From.sol
audits/CircleArc/src/contracts/src/call-from/: ICallFrom.sol
audits/CircleArc/src/contracts/test/: Denylist.t.sol
audits/CircleArc/src/crates/consensus-db/: Cargo.toml
audits/CircleArc/src/crates/engine-bench/: Cargo.toml  README.md
audits/CircleArc/src/crates/eth-engine/: Cargo.toml
audits/CircleArc/src/crates/evm/: Cargo.toml
audits/CircleArc/src/crates/evm-node/: Cargo.toml
audits/CircleArc/src/crates/evm-specs-tests/: Cargo.toml  README.md
audits/CircleArc/src/crates/execution-config/: Cargo.toml
audits/CircleArc/src/crates/execution-e2e/: Cargo.toml
audits/CircleArc/src/crates/execution-payload/: Cargo.toml
audits/CircleArc/src/crates/execution-txpool/: Cargo.toml
audits/CircleArc/src/crates/execution-validation/: Cargo.toml
audits/CircleArc/src/crates/malachite-app/: Cargo.toml  METRICS.md  README.md
audits/CircleArc/src/crates/malachite-cli/: Cargo.toml
audits/CircleArc/src/crates/mesh-analysis/: Cargo.toml
audits/CircleArc/src/crates/node/: Cargo.toml  README.md
audits/CircleArc/src/crates/precompiles/: Cargo.toml
audits/CircleArc/src/crates/quake/: Cargo.toml
audits/CircleArc/src/crates/remote-signer/: Cargo.toml  build.rs
audits/CircleArc/src/crates/shared/: Cargo.toml
audits/CircleArc/src/crates/signer/: Cargo.toml
audits/CircleArc/src/crates/snapshots/: Cargo.toml  README.md
audits/CircleArc/src/crates/spammer/: Cargo.toml  README.md
audits/CircleArc/src/crates/types/: Cargo.toml  build.rs
audits/CircleArc/src/crates/version/: Cargo.toml  build.rs
audits/CircleArc/src/deployments/: .gitignore  arc_consensus.yaml  arc_execution.yaml  entrypoint_arc_consensus.sh  entrypoint_arc_execution.sh  monitoring.yaml
audits/CircleArc/src/deployments/localstack_scripts/: health-check.sh  install-cert.sh
audits/CircleArc/src/docs/: ARCHITECTURE.md  PROFILING.md
audits/CircleArc/src/docs/adr/: 0001-adr-process.md  0002-block-dissemination-protocol.md  0003-governance-configuration-and-validation.md  0004-base-fee-validation.md  README.md  TEMPLATE.md
audits/CircleArc/src/scripts/: arc-check.sh  build-docker.sh  common.sh  down.sh  export-container-logs.sh  localdev.mjs  md-exec.md  md-exec.py  register-validator.sh  test_tx_latency_report.py  tx_latency_report.py  up.sh  update-malachite-deps.sh
audits/CircleArc/src/scripts/genesis/: AccountCreator.ts  AdminUpgradeableProxy.ts  Denylist.ts  NativeFiatToken.ts  ProtocolConfig.ts  ValidatorManager.ts  context.ts  genesis.ts  index.ts  types.ts  versions.ts
audits/CircleArc/src/scripts/hardhat/: viem-helper.ts
audits/CircleArc/src/scripts/perf/: check-end-state.sh  collect-metrics.sh  compare-reports.sh  prom-lib.sh
audits/CircleArc/src/scripts/scenarios/: README.md  nightly-perf.sh  nightly-random-manifests.sh  nightly-upgrade.sh
audits/CircleArc/src/tests/helpers/: AdminUpgradeableProxy.ts  BalanceComparator.ts  CallHelper.ts  Denylist.ts  DeterministicDeployerProxy.ts  FiatToken.ts  NativeCoinAuthority.ts  NativeCoinControl.ts  NativeTransferHelper.ts  PQ.ts  ProtocolConfig.ts  ReceiptVerifier.ts  RevertingProtocolConfig.ts  SystemAccounting.ts  TraceVerifier.ts  ValidatorManager.ts  client-extension.ts  getActiveValidatorSet.ts  index.ts  kzg.ts  pq_test_vectors.json  registerNewValidator.ts
audits/CircleArc/src/tests/localdev/: 4844.test.ts  7702.test.ts  Denylist.test.ts  NativeCoinAuthority.test.ts  NativeCoinControl.test.ts  NativeFiatToken.test.ts  PQ.test.ts  SystemAccounting.test.ts  ValidatorManager.test.ts  evm_compatibility.test.ts  native_transfer.test.ts  subcall.test.ts
audits/CircleArc/src/tests/simulation/: BlockHashHistory.test.ts  DelegateCall.test.ts  Denylist.test.ts  ERC7201-migration.test.ts  NativeFiatToken.test.ts  NativeFiatToken.upgrade.test.ts  ProtocolConfig.upgrade.test.ts  ValidatorManager.test.ts  native_transfer.test.ts
audits/CircleArc/src/tests/unit/: deployer-nonce.test.ts
(+1154 files in other folders)
