[package]
name = "arc-engine-bench"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "arc-engine-bench"
path = "src/main.rs"

[dependencies]
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
arc-eth-engine = { workspace = true }
arc-execution-config = { workspace = true }
arc-version = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
csv = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "native-tls-vendored"] }
reth-cli = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
