[package]
name = "arc-evm-specs-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "arc-evm-specs-tests"
path = "src/main.rs"

[dependencies]
alloy-primitives = { workspace = true, features = ["std", "rlp"] }
alloy-rlp = { workspace = true }

alloy-trie = { workspace = true, features = ["ethereum"] }

arc-evm = { workspace = true }
arc-execution-config = { workspace = true, features = ["test-utils"] }

clap = { workspace = true, features = ["derive"] }

hash-db = { workspace = true }
plain_hasher = { workspace = true }
reth-evm = { workspace = true }

revm = { workspace = true, features = ["std", "serde"] }
revm-context-interface = { workspace = true }
revm-database = { workspace = true, features = ["std"] }
revm-inspector = { workspace = true, features = ["tracer"] }
revm-primitives = { workspace = true }
revm-statetest-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
triehash = { workspace = true }

[lints]
workspace = true
