[package]
name = "arc-execution-config"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
exclude.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true

[features]
arbitrary = ["alloy-serde/arbitrary"]
test-utils = []

[dependencies]
# alloy
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-serde.workspace = true
alloy-sol-types.workspace = true

# arc
arc-shared.workspace = true

# misc
eyre.workspace = true
itertools.workspace = true
once_cell.workspace = true

# reth
reth-chainspec.workspace = true
reth-cli.workspace = true
reth-cli-commands.workspace = true
reth-ethereum-forks.workspace = true
reth-ethereum-primitives.workspace = true
reth-evm.workspace = true
reth-network-peers.workspace = true
reth-primitives-traits.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
thiserror.workspace = true

[dev-dependencies]
reth-ethereum = { workspace = true, features = ["evm"] }

[lints]
workspace = true
