[package]
name = "arc-execution-validation"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
exclude.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true

[features]

[dependencies]
# alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true

# internal
arc-execution-config.workspace = true

# reth
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-consensus-common.workspace = true
reth-ethereum = { workspace = true, features = ["consensus", "provider"] }
reth-ethereum-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true

# misc
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-consensus = { workspace = true }
arc-execution-config = { path = "../execution-config", features = ["test-utils"] }
mockall.workspace = true

[lints]
workspace = true
