[package]
name = "arc-mesh-analysis"
description = "Gossipsub mesh analysis for Malachite BFT networks"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "arc-mesh-analysis"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
futures-util = { workspace = true }
prometheus-parse = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }

[lints]
workspace = true
