[package]
name = "arc-node-execution"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "arc-node-execution"
path = "src/main.rs"

[features]
default = []
js-tracer = ["reth-node-builder/js-tracer", "reth-ethereum/js-tracer"]
pprof = ["dep:pprof_hyper_server", "dep:reth-node-metrics", "dep:tikv-jemalloc-ctl"]
arbitrary = [
    "alloy-primitives/arbitrary",
    "arc-execution-config/arbitrary",
    "arc-evm/arbitrary",
    "arc-evm-node/arbitrary",
    "revm-primitives/arbitrary",
    "revm/arbitrary",
    "reth-ethereum/arbitrary",
]
remote-signer = ["dep:protox", "dep:tonic-build"]
integration = ["remote-signer"]

[dependencies]
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-sol-types.workspace = true
arc-evm.workspace = true
arc-evm-node.workspace = true
arc-execution-config.workspace = true
arc-execution-txpool.workspace = true
arc-execution-validation.workspace = true
arc-version.workspace = true
clap.workspace = true
directories.workspace = true
eyre.workspace = true

metrics.workspace = true
pprof_hyper_server = { version = "0.2", features = ["pprof"], optional = true }
reth-chainspec.workspace = true
reth-db.workspace = true
reth-ethereum = { workspace = true, features = ["node-api", "node", "provider", "network", "evm", "pool", "cli", "js-tracer"] }
reth-evm.workspace = true
reth-node-builder = { workspace = true, features = ["js-tracer"] }
reth-node-core.workspace = true
reth-node-ethereum.workspace = true
reth-node-metrics = { workspace = true, optional = true, features = ["jemalloc"] }
reth-prune-types.workspace = true
reth-rpc-eth-types.workspace = true

# revm
revm.workspace = true
revm-inspectors.workspace = true
revm-primitives.workspace = true
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
tikv-jemalloc-ctl = { version = "0.6", optional = true }

tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true

# allocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[build-dependencies]
protox = { workspace = true, optional = true }
tonic-build = { workspace = true, optional = true }

[dev-dependencies]
arc-execution-config = { workspace = true, features = ["test-utils"] }

arc-precompiles.workspace = true
reth-e2e-test-utils.workspace = true
reth-rpc-eth-types.workspace = true

[lints]
workspace = true
